--- a/core/templates/core/sequencing_create_from_library.html
+++ b/core/templates/core/sequencing_create_from_library.html
@@ -7,7 +7,7 @@ Create Sequencing
 
 {% block body %}
 <div class="container graybg">
-    <form action="{% url 'core:sequencing_create' %}" method="POST">
+    <form action="{% url library_type|add:':sequencing_create' %}" method="POST">
         {% csrf_token %}
         <fieldset>
             <legend>Sequencing Information</legend>
@@ -51,7 +51,7 @@ Create Sequencing
             </table>
          </fieldset><br>
         <input class="btn btn-primary btn-sm" type="submit" name="create" value="Create">
-        <a class="btn btn-default btn-sm" href="{% url 'core:sequencing_list' %}">Cancel</a>
+        <a class="btn btn-default btn-sm" href="{% url library_type|add:':sequencing_list' %}">Cancel</a>
     </form><br>
 </div>
 {% endblock %}
