--- a/core/templates/core/sequencing_create_gsc_form.html
+++ b/core/templates/core/sequencing_create_gsc_form.html
@@ -8,7 +8,7 @@ GSC submission Form
 {% block body %}
 <!-- Meta Information -->
 <div class="container graybg">
-    <form action="{% url 'core:sequencing_create_gsc_form' pk=pk %}" method="POST">
+    <form action="{% url library_type|add:':sequencing_create_gsc_form' pk=pk %}" method="POST">
         {% csrf_token %}
         <fieldset>
             <legend>Delivery Information</legend>
@@ -23,7 +23,7 @@ GSC submission Form
             </table>
         </fieldset><br>
         <input class="btn btn-primary btn-sm" type="submit" name="download" value="Download">
-        <a class="btn btn-default btn-sm" href="{% url 'core:sequencing_detail' pk=pk %}">Cancel</a>
+        <a class="btn btn-default btn-sm" href="{% url library_type|add:':sequencing_detail' pk=pk %}">Cancel</a>
     </form>
 </div><br>
 <!-- end of Meta Information -->
