--- a/core/templates/core/sequencing_delete.html
+++ b/core/templates/core/sequencing_delete.html
@@ -8,10 +8,10 @@ Delete sequencing
 {% block body %}
 <div class="container graybg">
     <h5>Are you sure you want to delete sequencing <i class="emph">{{sequencing}}</i>?</h5><br>
-    <form action="{% url 'core:sequencing_delete' pk=pk %}" method="POST">
+    <form action="{% url library_type|add:':sequencing_delete' pk=pk %}" method="POST">
         {% csrf_token %}
         <input class="btn btn-danger btn-sm" type="submit" name="delete" value="Yes, I'm sure">
-        <a class="btn btn-default btn-sm" href="{% url 'core:sequencing_list' %}">Cancel</a>
+        <a class="btn btn-default btn-sm" href="{% url library_type|add:':sequencing_list' %}">Cancel</a>
     </form><br>
 </div>
 {% endblock %}
