--- a/core/templates/core/sequencing_create.html
+++ b/core/templates/core/sequencing_create.html
@@ -23,6 +23,7 @@ Create Sequencing
                     {% if field.name == "library" and library_id %}
                         <select id="id_library" name="library">
                             <option value="{{library_id}}" selected="selected">{{library}}</option>
+                        </select>
                     {% elif field.name == "relates_to" %}
                         <select class="selectpicker" data-live-search="True" id="id_relates_to" name="relates_to" multiple data-none-selected-text="--------">
                             {% for seq in related_seqs %}
