--- a/core/templates/core/sequencing_create.html
+++ b/core/templates/core/sequencing_create.html
@@ -1,9 +1,8 @@
 {% extends "base_view.html" %}
+
 {% load staticfiles %}
 
-{% block title %}
-Create Sequencing
-{% endblock %}
+{% block title %}Create Sequencing{% endblock %}
 
 {% block body %}
 <div class="container graybg">
@@ -14,44 +13,54 @@ Create Sequencing
             <table class="table-condensed">
                 <thead>
                 {% for field in form %}
-                <tr>
-                    <th>
-                    {{field.label_tag}}
-                    </th>
-                    <td>
-                    {{ field.errors }}
-                    {% if field.name == "library" and library_id %}
-                        <select id="id_library" name="library">
-                            <option value="{{library_id}}" selected="selected">{{library}}</option>
-                        </select>
-                    {% elif field.name == "relates_to" %}
-                        <select class="selectpicker" data-live-search="True" id="id_relates_to" name="relates_to" multiple data-none-selected-text="--------">
-                            {% for seq in related_seqs %}
-                            <option value={{seq.id}}>{{seq}}</option>
-                            {% endfor %}
-                        </select>
-                    {% else %}
-                        {{ field }}
-                    {% endif %}
-                    {% if field.help_text %}
-                        <p class="helptext">{{ field.help_text|safe }}</p>
-                    {% endif %}
-                    </td>
-                </tr>
+                    <tr>
+                        <th>
+                            {{ field.label_tag }}
+                        </th>
+                        <td>
+                            {{ field.errors }}
+
+                            {% if field.name == "library" and library_id %}
+                                <select id="id_library" name="library">
+                                    <option value="{{ library_id }}" selected="selected">{{ library }}</option>
+                                </select>
+                            {% elif field.name == "relates_to" %}
+                                <select class="selectpicker" data-live-search="True" id="id_relates_to" name="relates_to" multiple data-none-selected-text="--------">
+                                    {% for seq in related_seqs %}
+                                        <option value={{ seq.id }}>{{ seq }}</option>
+                                    {% endfor %}
+                                </select>
+                            {% else %}
+                                {{ field }}
+                            {% endif %}
+
+                            {% if field.help_text %}
+                                <p class="helptext">{{ field.help_text|safe }}</p>
+                            {% endif %}
+                        </td>
+                    </tr>
                 {% endfor %}
                 </thead>
             </table>
-         </fieldset><br>
+         </fieldset>
+
+         <br>
+
         <fieldset>
             <legend>Sequencing Details</legend>
             <table class="table-condensed">
                 <thead>
-                {{seqdetail_formset}}
+                    {{ seqdetail_formset }}
                 </thead>
             </table>
-         </fieldset><br>
+         </fieldset>
+
+         <br>
+
         <input class="btn btn-primary btn-sm" type="submit" name="create" value="Create">
         <a class="btn btn-default btn-sm" href="{% url library_type|add:':sequencing_list' %}">Cancel</a>
-    </form><br>
+    </form>
+
+    <br>
 </div>
 {% endblock %}
