--- a/core/templates/core/sequencing_detail.html
+++ b/core/templates/core/sequencing_detail.html
@@ -1,160 +1,166 @@
 {% extends "base_view.html" %}
+
 {% load staticfiles %}
 
-{% block title %}
-Sequencing Details
-{% endblock %}
+{% block title %}Sequencing Details{% endblock %}
 
 {% block body %}
-<!-- Download an already made GSC submission form -->
-<!-- <iframe width="1" height="1" frameborder="0" src="[File location]"></iframe> -->
-{% if download %}
-    <body onload="window.location.href='{% url library_type|add:":sequencing_get_gsc_form" pk=sequencing.pk %}'"> 
-{% endif %}
-<!-- End of Download an already made GSC submission form -->
+    <!-- Download an already made GSC submission form -->
+    {% if download %}
+        <body onload="window.location.href='{% url library_type|add:":sequencing_get_gsc_form" pk=sequencing.pk %}'">
+    {% endif %}
+    <!-- End of Download an already made GSC submission form -->
 
 <!-- Meta Information -->
-<div class="container" style="background-color:#FFF3E0;">
+<div class="container" style="background-color: #FFF3E0;">
 
     <!-- action list -->
     {% if library_type == 'dlp' %}
-    <div style="float:right; margin-top:5px;">
-        {% if not sequencing.library.has_sublibrary_info %}
-        <h5><i class="text-warning">No Sublibrary Information available!</i></h5>
-        {% else %}
-            <a class="btn btn-primary btn-sm" href="{% url library_type|add:':sequencing_create_gsc_form' pk=sequencing.pk %}">Create GSC submission form</a>
-        {% endif %}
-    </div>
+        <div style="float: right; margin-top: 5px;">
+            {% if not sequencing.library.has_sublibrary_info %}
+                <h5><i class="text-warning">No Sublibrary Information available!</i></h5>
+            {% else %}
+                <a class="btn btn-primary btn-sm" href="{% url library_type|add:':sequencing_create_gsc_form' pk=sequencing.pk %}">Create GSC submission form</a>
+            {% endif %}
+        </div>
     {% endif %}
     <!-- end of action list -->
 
     <table class="table-condensed">
         <tr>
-            <th id="thid">Library:</th>
-            <td id="tdid" class="notes"><a href="{{sequencing.library.get_absolute_url}}">{{sequencing.library}}</a></td>
+            <th id="thid">Library: </th>
+            <td id="tdid" class="notes"><a href="{{ sequencing.library.get_absolute_url }}">{{ sequencing.library }}</a></td>
         </tr>
+
         {% for field, value in sequencing.get_field_values.items %}
-        <tr>
-            <th id="thid">{{field}}:</th>
-            <td id="tdid" class="notes">{{value}}</td>
-        </tr>
+            <tr>
+                <th id="thid">{{ field }}:</th>
+                <td id="tdid" class="notes">{{ value }}</td>
+            </tr>
         {% endfor %}
+
         <tr>
             <th id="thid">Relates to:</th>
             <td id="tdid">
-            {% for seq in sequencing.relates_to.only %}
-                <a href="{{seq.get_absolute_url}}">{{seq}}</a><br>
-            {% endfor %}
+                {% for seq in sequencing.relates_to.only %}
+                    <a href="{{ seq.get_absolute_url }}">{{ seq }}</a>
+
+                    <br>
+                {% endfor %}
             </td>
         </tr>
     </table>
-</div><br>
+</div>
+
+<br>
 <!-- end of Meta Information -->
-    
+
 <!-- Sequencing Detail -->
 <div class="container">
     <h4>Sequencing Details</h4>
+
     {% if sequencing.has_sequencing_detail %}
-    <table class="table-condensed">
-        {% if library_type == 'dlp' %}
-            {% for field, value in sequencing.dlpsequencingdetail.get_field_values.items %}
-            <tr>
-                <th id="thid">{{field}}:</th>
-                <td id="tdid" class="notes">{{value}}</td>
-            </tr>
-            {% endfor %}
-        {% elif library_type == 'pbal' %}
-            {% for field, value in sequencing.pbalsequencingdetail.get_field_values.items %}
-            <tr>
-                <th id="thid">{{field}}:</th>
-                <td id="tdid" class="notes">{{value}}</td>
-            </tr>
-            {% endfor %}
-        {% elif library_type == 'tenx' %}
-            {% for field, value in sequencing.tenxsequencingdetail.get_field_values.items %}
-            <tr>
-                <th id="thid">{{field}}:</th>
-                <td id="tdid" class="notes">{{value}}</td>
-            </tr>
-            {% endfor %}
-        {% endif %}
-    </table>
+        <table class="table-condensed">
+            {% if library_type == 'dlp' %}
+                {% for field, value in sequencing.dlpsequencingdetail.get_field_values.items %}
+                    <tr>
+                        <th id="thid">{{ field }}:</th>
+                        <td id="tdid" class="notes">{{ value }}</td>
+                    </tr>
+                {% endfor %}
+            {% elif library_type == 'pbal' %}
+                {% for field, value in sequencing.pbalsequencingdetail.get_field_values.items %}
+                    <tr>
+                        <th id="thid">{{ field }}:</th>
+                        <td id="tdid" class="notes">{{ value }}</td>
+                    </tr>
+                {% endfor %}
+            {% elif library_type == 'tenx' %}
+                {% for field, value in sequencing.tenxsequencingdetail.get_field_values.items %}
+                    <tr>
+                        <th id="thid">{{ field }}:</th>
+                        <td id="tdid" class="notes">{{ value }}</td>
+                    </tr>
+                {% endfor %}
+            {% endif %}
+        </table>
     {% else %}
-    <h5><i class="text-warning">There are no sequencing details for this library!</i></h5>
+        <h5><i class="text-warning">There are no sequencing details for this library!</i></h5>
     {% endif %}
-</div><br>
+</div>
+
+<br>
 <!-- end of Sequencing Detail -->
 
 <!-- Lane Detail -->
 <div class="container">
     <h4>Lane Details</h4>
-    <div class="table">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Flow Cell ID</th>
-                    <th>Path To Archive</th>
-                    <th></th>
-                </tr>
-            </thead>
-    {% if sequencing.dlplane_set %}
-            <tbody>
-                {% for lane in sequencing.dlplane_set.all %}
-                <tr>
-                    <td>{{lane.flow_cell_id}}</td>
-                    <td>{{lane.path_to_archive}}</td>
-                    <td>
-                        <a href="{% url library_type|add:':lane_update' pk=lane.pk %}"><i class="fa fa-pencil" style="color:orange;"></i> update</a>
-                        <a href="{% url library_type|add:':lane_delete' pk=lane.pk %}"><i class="icon-remove-sign" style="color:red"></i> delete</a>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div> 
-    {% elif sequencing.pballane_set %}
-            <tbody>
-                {% for lane in sequencing.pballane_set.all %}
-                <tr>
-                    <td>{{lane.flow_cell_id}}</td>
-                    <td>{{lane.path_to_archive}}</td>
-                    <td>
-                        <a href="{% url library_type|add:':lane_update' pk=lane.pk %}"><i class="fa fa-pencil" style="color:orange;"></i> update</a>
-                        <a href="{% url library_type|add:':lane_delete' pk=lane.pk %}"><i class="icon-remove-sign" style="color:red"></i> delete</a>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-    {% elif sequencing.tenxlane_set %}
-            <tbody>
-                {% for lane in sequencing.tenxlane_set.all %}
-                <tr>
-                    <td>{{lane.flow_cell_id}}</td>
-                    <td>{{lane.path_to_archive}}</td>
-                    <td>
-                        <a href="{% url library_type|add:':lane_update' pk=lane.pk %}"><i class="fa fa-pencil" style="color:orange;"></i> update</a>
-                        <a href="{% url library_type|add:':lane_delete' pk=lane.pk %}"><i class="icon-remove-sign" style="color:red"></i> delete</a>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>    
+    {% if sequencing.dlplane_set.all or sequencing.pballane_set.all or sequencing_tenxlane_set.all %}
+        <div class="table">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Flow Cell ID</th>
+                        <th>Path To Archive</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% if sequencing.dlplane_set %}
+                        {% for lane in sequencing.dlplane_set.all %}
+                            <tr>
+                                <td>{{ lane.flow_cell_id }}</td>
+                                <td>{{ lane.path_to_archive }}</td>
+                                <td>
+                                    <a href="{% url library_type|add:':lane_update' pk=lane.pk %}"><i class="fa fa-pencil" style="color: orange;"></i> update</a>
+                                    <a href="{% url library_type|add:':lane_delete' pk=lane.pk %}"><i class="icon-remove-sign" style="color: red"></i> delete</a>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                    {% elif sequencing.pballane_set %}
+                        {% for lane in sequencing.pballane_set.all %}
+                            <tr>
+                                <td>{{ lane.flow_cell_id }}</td>
+                                <td>{{ lane.path_to_archive }}</td>
+                                <td>
+                                    <a href="{% url library_type|add:':lane_update' pk=lane.pk %}"><i class="fa fa-pencil" style="color: orange;"></i> update</a>
+                                    <a href="{% url library_type|add:':lane_delete' pk=lane.pk %}"><i class="icon-remove-sign" style="color: red"></i> delete</a>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                    {% elif sequencing.tenxlane_set %}
+                        {% for lane in sequencing.tenxlane_set.all %}
+                            <tr>
+                                <td>{{ lane.flow_cell_id }}</td>
+                                <td>{{ lane.path_to_archive }}</td>
+                                <td>
+                                    <a href="{% url library_type|add:':lane_update' pk=lane.pk %}"><i class="fa fa-pencil" style="color: orange;"></i> update</a>
+                                    <a href="{% url library_type|add:':lane_delete' pk=lane.pk %}"><i class="icon-remove-sign" style="color: red"></i> delete</a>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                    {% endif %}
+                </tbody>
+            </table>
+        </div>
     {% else %}
-    <h5><i class="text-warning">There are no lanes for this sequencing!</i></h5>
+        <h5><i class="text-warning">There are no lanes for this sequencing!</i></h5>
     {% endif %}
-    <a href="{% url library_type|add:':lane_create_from_sequencing' from_sequencing=sequencing.pk %}"><i class="fa fa-plus" aria-hidden="true" style="color:green;"></i> Add Lane</a></p>
-</div><br>
+
+    <a href="{% url library_type|add:':lane_create_from_sequencing' from_sequencing=sequencing.pk %}"><i class="fa fa-plus" aria-hidden="true" style="color: green;"></i> Add Lane</a></p>
+</div>
+
+<br>
 <!-- end of Sequencing Detail -->
 
 <!-- footer bottons -->
-<div class="container" style="margin-bottom:5px;">
-    <a class="btn btn-warning btn-sm" style="float:left; margin:5px;" href="{% url library_type|add:':sequencing_update' pk=sequencing.pk %}">Edit</a>
-    <a class="btn btn-danger btn-sm" style="float:left; margin:5px;" href="{% url library_type|add:':sequencing_delete' pk=sequencing.pk %}">Delete</a>
-    <a style="float:right; margin:5px;" href="{% url library_type|add:':sequencing_list' %}">List of sequencings</a>
-</div><br>
+<div class="container" style="margin-bottom: 5px;">
+    <a class="btn btn-warning btn-sm" style="float: left; margin: 5px;" href="{% url library_type|add:':sequencing_update' pk=sequencing.pk %}">Edit</a>
+    <a class="btn btn-danger btn-sm" style="float: left; margin: 5px;" href="{% url library_type|add:':sequencing_delete' pk=sequencing.pk %}">Delete</a>
+    <a style="float: right; margin: 5px;" href="{% url library_type|add:':sequencing_list' %}">List of sequencings</a>
+</div>
+
+<br>
 <!-- end of footer bottons -->
 
 {% endblock %}
