COLO-42: fixup COLO-3 changes for sequencings

--- a/core/templates/core/sequencing_list.html
+++ b/core/templates/core/sequencing_list.html
@@ -92,7 +92,7 @@
 {% block datatables_script %}
     <script type="text/javascript">
         $(document).ready(function() {
-            $("#lib_datatable").DataTable({
+            $("#datatable").DataTable({
                 "columnDefs": [
                     {
                         "type": "natural",
