COLO-42: make sure lane detail buttons look nice
This refers to the lane detail which you can find on a DLP sequencing
detail page.

--- a/core/templates/core/sequencing_detail.html
+++ b/core/templates/core/sequencing_detail.html
@@ -111,7 +111,7 @@
                             <tr>
                                 <td>{{ lane.flow_cell_id }}</td>
                                 <td>{{ lane.path_to_archive }}</td>
-                                <td>
+                                <td style="min-width: 10em">
                                     <a href="{% url library_type|add:':lane_update' pk=lane.pk %}"><i class="fa fa-pencil" style="color: orange;"></i> update</a>
                                     <a href="{% url library_type|add:':lane_delete' pk=lane.pk %}"><i class="icon-remove-sign" style="color: red"></i> delete</a>
                                 </td>
@@ -122,7 +122,7 @@
                             <tr>
                                 <td>{{ lane.flow_cell_id }}</td>
                                 <td>{{ lane.path_to_archive }}</td>
-                                <td>
+                                <td style="min-width: 10em">
                                     <a href="{% url library_type|add:':lane_update' pk=lane.pk %}"><i class="fa fa-pencil" style="color: orange;"></i> update</a>
                                     <a href="{% url library_type|add:':lane_delete' pk=lane.pk %}"><i class="icon-remove-sign" style="color: red"></i> delete</a>
                                 </td>
@@ -133,7 +133,7 @@
                             <tr>
                                 <td>{{ lane.flow_cell_id }}</td>
                                 <td>{{ lane.path_to_archive }}</td>
-                                <td>
+                                <td style="min-width: 10em">
                                     <a href="{% url library_type|add:':lane_update' pk=lane.pk %}"><i class="fa fa-pencil" style="color: orange;"></i> update</a>
                                     <a href="{% url library_type|add:':lane_delete' pk=lane.pk %}"><i class="icon-remove-sign" style="color: red"></i> delete</a>
                                 </td>
