--- a/core/templates/core/sequencing_detail.html
+++ b/core/templates/core/sequencing_detail.html
@@ -61,10 +61,17 @@
         <table class="table-condensed">
             {% if library_type == 'dlp' %}
                 {% for field, value in sequencing.dlpsequencingdetail.get_field_values.items %}
-                    <tr>
-                        <th id="thid">{{ field }}:</th>
-                        <td id="tdid" class="notes">{{ value }}</td>
-                    </tr>
+                    {% if field == 'Number Of Lanes Requested' %}
+                        <tr>
+                            <th id="thid">{{ field }}:</th>
+                            <td id="tdid" class="notes">{{sequencing.dlplane_set.all.count}}</td>
+                        </tr>
+                    {% else %}
+                        <tr>
+                            <th id="thid">{{ field }}:</th>
+                            <td id="tdid" class="notes">{{ value }}</td>
+                        </tr>
+                    {% endif %}
                 {% endfor %}
             {% elif library_type == 'pbal' %}
                 {% for field, value in sequencing.pbalsequencingdetail.get_field_values.items %}
