Adding datetime field for lanes in colossus

--- a/core/templates/core/sequencing_detail.html
+++ b/core/templates/core/sequencing_detail.html
@@ -98,6 +98,7 @@
                     <tr>
                         <th>Flow Cell ID</th>
                         <th>Path To Archive</th>
+                        <th>Sequencing Date</th>
                         <th></th>
                     </tr>
                 </thead>
@@ -107,6 +108,7 @@
                             <tr>
                                 <td>{{ lane.flow_cell_id }}</td>
                                 <td>{{ lane.path_to_archive }}</td>
+                                <td>{{ lane.sequencing_date }}</td>
                                 <td style="min-width: 10em">
                                     <a href="{% url library_type|add:':lane_update' pk=lane.pk %}"><i class="fa fa-pencil" style="color: orange;"></i> update</a>
                                     <a href="{% url library_type|add:':lane_delete' pk=lane.pk %}"><i class="icon-remove-sign" style="color: red"></i> delete</a>
