--- a/core/templates/core/sequencing_list.html
+++ b/core/templates/core/sequencing_list.html
@@ -24,6 +24,7 @@
                     {% endif %}
 
                     <th>Submission date</th>
+                    <th>Most Recent Lane Received </th>
                     <th class="no-sort-col"></th>
                 </tr>
             </thead>
@@ -74,6 +75,11 @@
                         {% endif %}
 
                         <td>{{ sequencing.submission_date }}</td>
+                        {% if sequencing.most_recent_lane %}
+                            <td>{{sequencing.most_recent_lane}}</td>
+                        {% else %}
+                            <td></td>
+                        {% endif %}
                         <td>
                             <div style="float: right; min-width: 69px">
                                 <a style="margin-right: 2px;" href="{% url library_type|add:':sequencing_update' pk=sequencing.pk %}"><i class="fa fa-pencil" aria-hidden="true" style="color: orange;"></i> edit</a>
